src/test/resources/valid_programs/expr_stm_lits_simple.notc
void main() {
    1;
    "ehkg";
    2.9;
    true;
}
