src/test/resources/semantic_errors/funcall_wrong_number_of_args2.notc
void fun (bool a, bool b) {
}

void main() {
    fun(true);
}
